<resources>
    <string name="app_name">Camping</string>
    <string name="hint_nombre">Escribe nombre...</string>
    <string name="hint_descripcion">Escribe descripción...</string>
    <string name="hint_maxOcupantes">Escribe máximo de ocupantes...</string>
    <string name="hint_precioPorOcupante">Escribe precio por ocupante</string>
    <string name="button_save">Guardar</string>
    <string name="empty_not_saved">Parcela no guardada porque el nombre es vacío.</string>
    <string name="add_note">Añadir parcela</string>
    <string name="menu_delete">Borrar parcela</string>
    <string name="menu_edit">Editar parcela</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="max_ocupantes">Máx.ocupantes</string>
    <string name="precio_ocupante">Precio por ocupante</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
</resources>